Archive2/b3/8a413588b4196e/output
main.cpp: In function 'int main()':
main.cpp:8:15: error: wrong number of template arguments (0, should be 1)
     std::hash<> hash_fn;
               ^
In file included from /usr/local/include/c++/4.9.2/bits/basic_string.h:3068:0,
                 from /usr/local/include/c++/4.9.2/string:52,
                 from /usr/local/include/c++/4.9.2/bits/locale_classes.h:40,
                 from /usr/local/include/c++/4.9.2/bits/ios_base.h:41,
                 from /usr/local/include/c++/4.9.2/ios:42,
                 from /usr/local/include/c++/4.9.2/ostream:38,
                 from /usr/local/include/c++/4.9.2/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/bits/functional_hash.h:58:12: error: provided for 'template<class _Tp> struct std::hash'
     struct hash;
            ^
main.cpp:8:24: error: invalid type in declaration before ';' token
     std::hash<> hash_fn;
                        ^
main.cpp:9:39: error: 'hash_fn' cannot be used as a function
     std::size_t str_hash = hash_fn(str);
                                       ^
